5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1577_1326.log
== TEST (2019-03-14 18:58:56) 
-- CODE:
print(40)
print(+)
print(35)

-- ERROR:
File "XXXX", line 2
    print(+)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:59:35) 
-- CODE:
print(40)
print("+")
print(35)

-- OUTPUT:
40
+
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:01:31) 
-- CODE:
print(40+35)


-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:34) 
-- CODE:
print(40+35)


-- EXECUTION TIME:
0.176697
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
